--- a/Lesson__012/index.html
+++ b/Lesson__012/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Lesson 11</title>
+	<title>Lesson 12</title>
 </head>
 <body>
-	<h1>Hi World</h1>
+	<h1> Практика, ч.1. Начинаем создавать приложение</h1>
 	<script src="./script.js"></script>
 </body>
 </html>
