--- a/Lesson__033 (Practical work No. 2)/index.html
+++ b/Lesson__033 (Practical work No. 2)/index.html
@@ -85,7 +85,7 @@
                 placeholder="Что уже посмотрено...?"
               />
               <span>Сделать его любимым?</span>
-              <input type="checkbox" />
+              <input id="checkbox" type="checkbox" />
               <span class="yes">Да!</span>
               <button type="submit">Подтвердить</button>
             </form>
