--- a/Lesson__035 (Async, defer and dynamic scripts)/index.html
+++ b/Lesson__035 (Async, defer and dynamic scripts)/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>JavaScript</title>
     <link rel="stylesheet" href="css.css" />
+
+    <script src="script.js" defer></script>
+    <!-- <script src="test.js" defer></script> -->
   </head>
   <body>
-    <button id="btn">Нажми меня</button>
     <button>Нажми меня</button>
     <button>Нажми меня</button>
-
-    <a href="https://www.youtube.com/">https://www.youtube.com/</a>
-
-    <script src="script.js"></script>
+    <button>Нажми меня</button>
+    <button>Нажми меня</button>
+    <button>Нажми меня</button>
   </body>
 </html>
