--- a/Lesson__037 (Event delegation and ClassList)/index.html
+++ b/Lesson__037 (Event delegation and ClassList)/index.html
@@ -9,6 +9,9 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <button class="first second third">Нажми меня</button>
+    <button class="new_button">Нажми меня</button>
+    <button>Нажми меня</button>
     <button>Нажми меня</button>
     <button>Нажми меня</button>
     <button>Нажми меня</button>
