--- a/Lesson__048 (Continue First Project. 'Classes in practice')/index.html
+++ b/Lesson__048 (Continue First Project. 'Classes in practice')/index.html
@@ -226,7 +226,7 @@
 
       <div class="menu__field">
         <div class="container">
-          <div class="menu__item">
+          <!-- <div class="menu__item">
             <img src="img/tabs/vegy.jpg" alt="vegy" />
             <h3 class="menu__item-subtitle">Меню "Фитнес"</h3>
             <div class="menu__item-descr">
@@ -239,8 +239,8 @@
               <div class="menu__item-cost">Цена:</div>
               <div class="menu__item-total"><span>229</span> грн/день</div>
             </div>
-          </div>
-          <div class="menu__item">
+          </div> -->
+          <!-- <div class="menu__item">
             <img src="img/tabs/elite.jpg" alt="elite" />
             <h3 class="menu__item-subtitle">Меню “Премиум”</h3>
             <div class="menu__item-descr">
@@ -253,8 +253,8 @@
               <div class="menu__item-cost">Цена:</div>
               <div class="menu__item-total"><span>550</span> грн/день</div>
             </div>
-          </div>
-          <div class="menu__item">
+          </div> -->
+          <!-- <div class="menu__item">
             <img src="img/tabs/post.jpg" alt="post" />
             <h3 class="menu__item-subtitle">Меню "Постное"</h3>
             <div class="menu__item-descr">
@@ -268,7 +268,7 @@
               <div class="menu__item-cost">Цена:</div>
               <div class="menu__item-total"><span>430</span> грн/день</div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
