--- a/Lesson__043 (Continue First Project. 'Modal Windows')/index.html
+++ b/Lesson__043 (Continue First Project. 'Modal Windows')/index.html
@@ -315,6 +315,14 @@
         <div class="promotion__timer">
           <div class="title">Осталось до конца акции:</div>
           <div class="timer">
+						<div class="timer__block">
+              <span id="years">12</span>
+              year
+						</div>
+						<div class="timer__block">
+              <span id="months">12</span>
+              month
+            </div>
             <div class="timer__block">
               <span id="days">12</span>
               дней
